# SavvyCAN

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  Info.plist.template  LICENSE  README.md  SavvyCAN.desktop  SavvyCAN.pro  SavvyCAN.qch  SavvyCAN.qhc  SavvyCAN.qhcp  SavvyCAN.qhp  bisectwindow.cpp  bisectwindow.h  blfhandler.cpp  blfhandler.h  build_validation.txt  can_structs.cpp  can_structs.h  can_trigger_structs.h  canbridgewindow.cpp  canbridgewindow.h  canbus.cpp  canbus.h  canconnection.cpp  canconnection.h  canconnectioncontainer.cpp  canconnectioncontainer.h  canconnectionmodel.cpp  canconnectionmodel.h  candatagrid.cpp  candatagrid.h  candatagrid.ui  candataitemdelegate.cpp  candataitemdelegate.h  canfilter.cpp  canfilter.h  (+121 more)
.github/workflow/: build.yml
.github/workflows/: build.yml
bus_protocols/: handler_factory.cpp  handler_factory.h  isotp_handler.cpp  isotp_handler.h  isotp_message.h  j1939_handler.cpp  j1939_handler.h  uds_handler.cpp  uds_handler.h
compilers/: gcc.pri  msvc.pri
connections/: canbus.cpp  canbus.h  canconconst.h  canconfactory.cpp  canconfactory.h  canconmanager.cpp  canconmanager.h  canconnection.cpp  canconnection.h  canconnectionmodel.cpp  canconnectionmodel.h  canlogserver.cpp  canlogserver.h  canserver.cpp  canserver.h  connectionwindow.cpp  connectionwindow.h  gvretserial.cpp  gvretserial.h  lawicel_serial.cpp  lawicel_serial.h  mqtt_bus.cpp  mqtt_bus.h  newconnectiondialog.cpp  newconnectiondialog.h  serialbusconnection.cpp  serialbusconnection.h  socketcan.cpp  socketcan.h  socketcand.cpp  socketcand.h
connections/gs_usb_driver/: gs_usb.cpp  gs_usb.h  gs_usb.pri  gs_usb_definitions.h  gs_usb_functions.h  gs_usb_reader.cpp  gs_usb_reader.h
dbc/: dbc_classes.cpp  dbc_classes.h  dbchandler.cpp  dbchandler.h  dbcloadsavewindow.cpp  dbcloadsavewindow.h  dbcmaineditor.cpp  dbcmaineditor.h  dbcmessageeditor.cpp  dbcmessageeditor.h  dbcnodeduplicateeditor.cpp  dbcnodeduplicateeditor.h  dbcnodeeditor.cpp  dbcnodeeditor.h  dbcnoderebaseeditor.cpp  dbcnoderebaseeditor.h  dbcsignaleditor.cpp  dbcsignaleditor.h
docs/: Makefile  build.sh  make.bat
docs/source/: bisector.rst  conf.py  connectionwindow.rst  customsender.rst  dbc_editor.rst  dbc_manager.rst  filecomparison.rst  firmwareuploader.rst  flowview.rst  framedetails.rst  fuzzingwindow.rst  graphsetup.rst  graphwindow.rst  index.rst  isotp_decoder.rst  mainscreen.rst  playbackwindow.rst  preferences.rst  rangestate.rst  scriptingwindow.rst  signaleditor.rst  sniffer.rst  temporalwindow.rst  uds_scanner.rst
examples/: CRTD_Log.txt  CaptureAllMsgTypes.js  CarBusAnalyzer.trc  CarBusAnalyzer_CANFD.trc  CarBusAnalyzer_v3.trc  GVRET_Log.csv  GenericID_Log.csv  GetCANandTick.js  LeafPowertrainBus.dbc  RLEC.js  SomeIXXAT.csv  ThinkCity.dbc  UpdateParameter.js  bms.dbc
help/: bisector.html  bisector.md  canbridge.md  connectionwindow.html  connectionwindow.md  customsender.html  customsender.md  dbc_editor.html  dbc_editor.md  dbc_manager.html  dbc_manager.md  filecomparison.html  filecomparison.md  flowview.html  flowview.md  framedetails.html  framedetails.md  fuzzingwindow.html  fuzzingwindow.md  genindex.html  graphsetup.html  graphsetup.md  graphwindow.html  graphwindow.md  index.html  isotp_decoder.html  isotp_decoder.md  mainscreen.html  mainscreen.md  newconnection.md  playbackwindow.html  playbackwindow.md  preferences.html  preferences.md  rangestate.html  rangestate.md  scriptingwindow.html  scriptingwindow.md  search.html  searchindex.js  (+8 more)
help/_static/: documentation_options.js  jquery.js  language_data.js
icons/: SavvyIcon.icns
images/sourceImages/: noun_nodes_2397529.xcf  noun_signal_1402315.xcf
libs/candle_api/: LICENSE  README.md
mqtt/: README.md  qmqtt.h  qmqtt_client.cpp  qmqtt_client.h  qmqtt_client_p.cpp  qmqtt_client_p.h  qmqtt_frame.cpp  qmqtt_frame.h  qmqtt_global.h  qmqtt_message.cpp  qmqtt_message.h  qmqtt_message_p.h  qmqtt_network.cpp  qmqtt_network_p.h  qmqtt_networkinterface.h  qmqtt_routedmessage.h  qmqtt_router.cpp  qmqtt_router.h  qmqtt_routesubscription.cpp  qmqtt_routesubscription.h  qmqtt_socket.cpp  qmqtt_socket_p.h  qmqtt_socketinterface.h  qmqtt_ssl_socket.cpp  qmqtt_ssl_socket_p.h  qmqtt_timer.cpp  qmqtt_timer_p.h  qmqtt_timerinterface.h  qmqtt_websocket.cpp  qmqtt_websocket_p.h  qmqtt_websocketiodevice.cpp  qmqtt_websocketiodevice_p.h
re/: dbccomparatorwindow.cpp  dbccomparatorwindow.h  discretestatewindow.cpp  discretestatewindow.h  filecomparatorwindow.cpp  filecomparatorwindow.h  flowviewwindow.cpp  flowviewwindow.h  frameinfowindow.cpp  frameinfowindow.h  fuzzingwindow.cpp  fuzzingwindow.h  graphingwindow.cpp  graphingwindow.h  isotp_handler.cpp  isotp_interpreterwindow.cpp  isotp_interpreterwindow.h  newgraphdialog.cpp  newgraphdialog.h  rangestatewindow.cpp  rangestatewindow.h  temporalgraphwindow.cpp  temporalgraphwindow.h  udsscanwindow.cpp  udsscanwindow.h
re/sniffer/: SnifferDelegate.cpp  (+7 more)
scripts/: README.md  build_translations.sh  edit_translations.sh  update_translations.sh
src/: src.pro
test/: main.cpp  test.pro  tst_cancon.cpp  tst_cancon.h  tst_lfqueue.cpp  tst_lfqueue.h
tests/: main.cpp  tests.pro  tst_cancon.cpp  tst_cancon.h  tst_lfqueue.cpp  tst_lfqueue.h
translations/: SavvyCAN_en.ts  SavvyCAN_pt_BR.ts  pt_BR.qph  savvycan_en.ts  savvycan_pt_BR.ts
ui/: bisectwindow.ui  connectionwindow.ui  dbccomparatorwindow.ui  dbcloadsavewindow.ui  dbcmaineditor.ui  dbcmessageeditor.ui  dbcnodeduplicateeditor.ui  dbcnodeeditor.ui  dbcnoderebaseeditor.ui  dbcsignaleditor.ui  discretestatewindow.ui  filecomparatorwindow.ui  flowviewwindow.ui  frameinfowindow.ui  frameplaybackwindow.ui  framesenderwindow.ui  fuzzingwindow.ui  graphingwindow.ui  isotp_interpreterwindow.ui  mainsettingsdialog.ui  mainwindow.ui  motorcontrollerconfigwindow.ui  newconnectiondialog.ui  newgraphdialog.ui  rangestatewindow.ui  scriptingwindow.ui  signalviewerwindow.ui  snifferwindow.ui  udsscanwindow.ui
unit_tests/: CMakeLists.txt  test_isotp_handler.cpp  test_uds_handler.cpp
utils/: HexSpinBox.h  lfqueue.h
(+202 files in other folders)
